# deep-rayon

./: .env.example  .gitignore  .pre-commit-config.yaml  .sqlfluff  .yamllint.yml  AGENTS.md  LICENSE  README.md  databricks.yml  mise.toml  mkdocs.yml  mprocs.yaml  pyproject.toml  ruff.toml
dbt_project/: .user.yml  README.md  dbt_project.yml  profiles.yml  pyproject.toml
dbt_project/macros/: datediff_days.sql  generate_schema_name.sql  optimize_tables.sql  parse_date.sql  read_source.sql
dbt_project/models/bronze/: _bronze_models.yml  _sources.yml  clients.sql  clients_bronze.sql  products.sql  products_bronze.sql  stores.sql  stores_bronze.sql  transactions.sql  transactions_bronze.sql
dbt_project/models/gold/: _gold_models.yml  _gold_unit_tests.yml  basket_analysis_per_store.sql  basket_analysis_per_store_gold.sql  nb_clients_per_store.sql  nb_clients_per_store_gold.sql  product_trend_per_store.sql  product_trend_per_store_gold.sql
dbt_project/models/silver/: _silver_models.yml  _silver_unit_tests.yml  customer.sql  customer_silver.sql
dbt_project/models/staging/: _sources.yml  _stg_models.yml  stg_clients.sql  stg_products.sql  stg_stores.sql  (+1 more)
dbt_project/seeds/: brand_mapping.csv
dbt_project/tests/: assert_avg_transactions_per_client_consistent.sql  assert_basket_min_le_max.sql  assert_gold_stores_exist_in_bronze.sql  assert_nb_clients_le_total_transactions.sql  assert_rfm_scores_within_bounds.sql  assert_sales_windows_monotonic.sql  assert_sign_corrected_transactions_have_consistent_signs.sql  assert_store_loyalty_score_within_range.sql
docs/: dbt.md  (+4 more)
(+38 files in other folders)
