[project]
name = "deep-rayon"
version = "0.1.0"
description = "Data platform for Vusion retail analytics — medallion architecture on DuckDB/Databricks"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
deep-rayon-benchmark = "benchmarks.__main__:main"

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "benchmarks"
module-root = ""

[dependency-groups]
dev = [
    "dbt-duckdb>=1.9",
    "duckdb>=1.0",
    "pyspark>=3.5",
    "pytest>=8.0",
    "sqlfluff-templater-dbt>=3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ty.src]
# Airflow files run inside Docker; reference files are read-only originals
exclude = ["airflow/", "reference/"]
