[project]
name = "vusion-dbt"
version = "0.1.0"
description = "dbt project for Vusion retail data platform — medallion architecture on DuckDB/Databricks"
requires-python = ">=3.12"
dependencies = [
    "dbt-duckdb>=1.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["../benchmarks"]
